@@ -22,3 +22,22 @@ char* parseForConfig(char* res) {
   }
   return pairs[1].value;
 }
+
+oidc_error_t parseForErrorCode(char* res) {
+  struct key_value pairs[1];
+  pairs[0].key = INT_IPC_KEY_OIDCERRNO;
+  if (getJSONValuesFromString(res, pairs, sizeof(pairs) / sizeof(*pairs)) < 0) {
+    printError("Could not decode json: %s\n", res);
+    printError("This seems to be a bug. Please hand in a bug report.\n");
+    secFree(res);
+    return oidc_errno;
+  }
+  secFree(res);
+
+  if (pairs[0].value) {
+    oidc_errno = strToInt(pairs[0].value);
+    secFree(pairs[0].value);
+    return oidc_errno;
+  }
+  return OIDC_SUCCESS;
+}
